<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="16dp"
    android:elevation="8dp"
    app:cardCornerRadius="16dp"
    android:backgroundTint="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/imageGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/headlineGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.77"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/contentGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.92"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/sourceGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <ImageView
            android:id="@+id/newsImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/source_image"
            android:scaleType="centerCrop"
            android:src="@drawable/news_image"
            app:layout_constraintBottom_toTopOf="@id/imageGuide"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/headline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="18sp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/grey"
            android:gravity="center_vertical"
            android:text="@string/demo_headline"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageGuide"
            app:layout_constraintBottom_toTopOf="@id/headlineGuide"/>

        <TextView
            android:id="@+id/newsContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:maxLines="3"
            android:textSize="14sp"
            android:ellipsize="end"
            android:layout_margin="8dp"
            android:text="@string/demo_content"
            android:textColor="@color/light_grey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headlineGuide"
            app:layout_constraintBottom_toTopOf="@id/contentGuide"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/dark_red"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contentGuide"/>

        <TextView
            android:id="@+id/source"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/source_text"
            android:layout_marginStart="12dp"
            android:paddingTop="6dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/light_grey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/sourceGuide"
            app:layout_constraintTop_toBottomOf="@id/contentGuide"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/time_text"
            android:textAlignment="textEnd"
            android:maxLines="1"
            android:ellipsize="end"
            android:paddingTop="6dp"
            android:textColor="@color/light_grey"
            android:layout_marginEnd="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/sourceGuide"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contentGuide" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>